--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,7 @@
       </li>
       <li class="nav-item active">
         <%# <%= link_to "My Decks", user_decks_path%>
-        <a class="nav-link" href="/user_decks"> Browse Decks <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/decks"> Browse Decks <span class="sr-only">(current)</span></a>
       </li>
       <%# <li class="nav-item active">
         <a class="nav-link" href="#"> Language <span class="sr-only">(current)</span></a>
@@ -25,12 +25,35 @@
       </ul>
     <% end %>
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Mark
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Profile</a>
+          <a class="dropdown-item" href="#">Settings</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Log Out</a>
+        </div>
+      </li>
+
+
+      <%# <div class="dropdown">
+        <button class="dropbtn">Mark
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Profile</a>
+          <a href="#">Settings</a>
+          <a href="#">Log out</a>
+        </div>
+      </div> %>
+      <%# <li class="nav-item active">
         <a class="nav-link" href="#"> Mark <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#"> Log out <span class="sr-only">(current)</span></a>
-      </li>
+      </li> %>
     </ul>
     <%# <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
