Implementing #check_answer method and view

--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -25,7 +25,7 @@
           <div class="col">
             <h1><%= deck.name %></h1>
             <h2><%= deck.language %></h2>
-            <%= deck_flashcards_count %>
+            <%= deck_flashcards_count %> card(s)
           </div>
           <div class="col">
             <%# <%= button_to "Incorrect", update_review_user_flashcard_path(top_user_flashcard, answer_correct: false), method: :patch %>
