--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,13 +88,15 @@ nav .navbar-nav li a:hover, .navbar-brand:hover {
   // padding: 10px;
   border-radius: 10px;
   height: 150px;
-  background-color: $red;
+  background-color: $gray; //$red;
   // box-shadow: 2px 2px 4px 2px #888888;
   box-shadow: 0 4px 4px -4px rgba(0,0,0,.2);
+  transition: 0.2s;
 }
 
 .deck-row:hover {
-  filter: brightness(85%);
+  // filter: brightness(85%);
+  box-shadow: 0 0 5px 4px rgba(0,0,0,.2);
 }
 
 .deck-row-top-buffer {
