--- a/app/views/user_decks/index.html.erb
+++ b/app/views/user_decks/index.html.erb
@@ -69,15 +69,18 @@
               <%# <%= link_to "Review", user_deck_path(user_deck.id) %>
               <%# <%= link_to "Review", user_deck_review_path(user_deck.id) %>
               <% if user_deck_flashcards_to_review_count > 0 %>
-                <%= button_to "Review (#{user_deck_flashcards_to_review_count})", user_deck_review_path(user_deck.id), method: :get, id: 'review-button', class: 'deck-button reviews_due' %>
+                <%= button_to "Review (#{user_deck_flashcards_to_review_count})", user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'deck-button reviews_due' %>
               <% else %>
-                <%= button_to "Review (#{user_deck_flashcards_to_review_count})", user_deck_review_path(user_deck.id), method: :get, id: 'review-button', class: 'deck-button' %>
+                <%= button_to "Review (#{user_deck_flashcards_to_review_count})", user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'deck-button' %>
               <% end %>
 
               <%# helper method to return count of review pile %>
               <%# <%= button_to "Review", user_deck_review_path(user_deck.id) %>
               <%# <button type="button" class="btn btn-danger">Review</button> %>
             </div>
+
+          <%= link_to "Delete", user_deck_path(user_deck), :method => :delete %>
+
           </div>
         </div>
         </div>
