Move SQL logic from review.html.erb to user_decks#review, add fields to review question view

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar myNavbar navbar-expand-lg">
+<nav class="navbar myNavbar navbar-expand-lg navbar-fixed-top">
   <a class="navbar-brand" href="#">Verble</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -36,8 +36,6 @@
           <a class="dropdown-item" href="#">Log Out</a>
         </div>
       </li>
-
-
       <%# <div class="dropdown">
         <button class="dropbtn">Mark
           <i class="fa fa-caret-down"></i>
@@ -54,6 +52,19 @@
       <li class="nav-item active">
         <a class="nav-link" href="#"> Log out <span class="sr-only">(current)</span></a>
       </li> %>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Link</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+        </ul>
+      </li>
     </ul>
     <%# <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
